[package]
name = "socket_api_v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
tiberius = "0.12.3"
tokio-util = { version = "0.7.12", features = ["full"]}
futures-util = "0.3.31"
async-trait = "0.1.83"

